Fix LeftPanel LabelListView horizontal scrolling

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -419,7 +419,6 @@ Vbox, SplitPane {
 
 #labelListCard {
     -fx-opacity: 0.75;
-    -fx-padding: 0 0 0 45;
 }
 
 #labelText {
